trunk/Archive2/f3/5cc33f0ea713f4/output
main.cpp:7:8: error: class member cannot be redeclared
  void boo(const char) {
       ^
main.cpp:4:8: note: previous declaration is here
  void boo(char) {
       ^
main.cpp:7:8: error: redefinition of 'boo'
  void boo(const char) {
       ^
main.cpp:4:8: note: previous definition is here
  void boo(char) {
       ^
2 errors generated.
