trunk/Archive2/f3/5cc33f0ea713f4/main.cpp
#include <iostream>

struct Foo {
  void boo(char) {
  }
  
  void boo(const char) {
  }
};

int main() {
}